GNOME Bugzilla – Bug 645455
tiling: Fix dragging windows free from edge-tiling
Last modified: 2011-03-21 21:01:54 UTC
Commit 96c43866b1099 broke dragging free of edge-tiled windows. It forced a tile mode of META_TILE_NONE for windows which are not tilable. The oversight there is basically that meta_window_can_tile_side_by_side() returns FALSE for tiled windows (as META_WINDOW_CAN_RESIZE() returns FALSE for tiled windows), so resetting the tile mode in that case has the effect that mutter no longer considers the window tiled - according to mutter, it is now just maximized vertically. Fortunately for the intended resolution of bug 644961, that part of the patch is not necessary, so a partial revert fixes edge-tiling without affecting the preference for edge-tiling over maximization in the top corners.
Created attachment 183998 [details] [review] tiling: Fix dragging windows free from edge-tiling Commit 96c43866 changed the tiling behavior to prefer edge tiling over maximization in corner cases (well, quite literally). As a side effect, it only allows untiling of edge-tiled windows by dragging the window towards the correct edge. This patch restores the old behavior for untiling, while keeping the new behavior for untiled windows.
Added a clarifying comment after IRC review. Attachment 183998 [details] pushed as 26e41bc - tiling: Fix dragging windows free from edge-tiling